<resources>
    <string name="app_name">Theatre</string>

    <!-- For search interface -->
    <string name="search_hint">Try Something Here</string>

    <!-- Content description for image views -->
    <string name="mainpage_thumbnail_cd">Display thumbnail of movie or Tv in the main page, usually of a small size.</string>
    <string name="mainpage_home_icon_cd">A image icon for navigation drawer in the replacement of the original one.</string>
    <string name="mainpage_back_icon_cd">Back icon which allows user to dismiss the search popup window.</string>
    <string name="mainpage_clear_icon_cd">Clear icon for clearing all input by user which appears when there is input in edit text view.</string>

    <!-- For menu in nav bar -->
    <string name="navbar_menu_settings">Settings</string>
    <string name="mainpage_add_icon_cd">Display if a movie or Tv show is added to watchlist or not.</string>
    <string name="explore_more_tv">More</string>
    <string name="nav_menu_home">Home</string>
    <string name="nav_menu_movie">Movie</string>
    <string name="nav_menu_TV">TV Show</string>
    <string name="nav_menu_account">Account</string>
    <string name="nav_menu_watchlist">Watchlist</string>
    <string name="mainpage_backdrop_popup_cd">A image to display a demanding item\'s backdrop</string>
    <string name="history_icon_popup">History icon</string>
    <string name="delete_icon_popup">Delete icon</string>
    <string name="back_icon_in_search_activity">Back icon in search activity.</string>
    <string name="search_poster_cd">search_poster_cd</string>
</resources>
