<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:id="@+id/nav_main_group"
        android:checkableBehavior="single">

        <item
            android:id="@+id/nav_menu_home"
            android:title="@string/nav_menu_home"/>

        <item
            android:id="@+id/nav_menu_movie"
            android:title="@string/nav_menu_movie"/>

        <item
            android:id="@+id/nav_menu_tv"
            android:title="@string/nav_menu_TV"/>

    </group>

    <group
        android:id="@+id/nav_user_related_group">

        <item
            android:id="@+id/nav_menu_account"
            android:title="@string/nav_menu_account"/>

        <item
            android:id="@+id/nav_menu_watchlist"
            android:title="@string/nav_menu_watchlist"/>

        <item
            android:id="@+id/nav_menu_setting"
            android:title="@string/navbar_menu_settings"/>
    </group>

</menu>